# stm32-temp-sensor-rust-can

./: README.md
raspberry-project/: Cargo.toml
raspberry-project/src/: main.rs
stm32f4_project/: Cargo.toml  flash.sh  memory.x
stm32f4_project/src/: main.rs
